--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -126,9 +126,9 @@ unoccupied subspace.
 \section{Introduction}
 Since the days of their foundations, disciplines like Computational Physics or Quantum Chemistry always had to deal with the problem of the 
 computational reliability of the results. More specifically, a computational result may be considered as reliable for various reasons.
-It might be, for example, in agreement with some previously existing data that the employed computational model is susceptible to reproduce.
+It might be, for example, in agreement with some previous observation or measurement that the employed computational model is susceptible to reproduce.
 The model itself may in this way be classified as ``accurate''; it can then be employed to extract, \textit{in silico},
-other quantities that might be then used to \emph{predict} or \emph{interpret} experimental data.
+other quantities that might be then used to \emph{predict} or \emph{interpret} experiments.
 Another concept of reliability is the concept of  ``precision'', which is more focused to the actual results
 that a given computational model provides for a specific set of quantities, regardless of their potential agreement with 
 experimental data. The aim of precise computational approach is to reduce the \emph{computational} uncertainties
@@ -137,9 +137,9 @@ employing the same model can be compared.
 
 A recent, remarkable example of precision-driven initiative is provided by the DeltaCodes project~\cite{deltaTest2016},
 where a grassroot community of code-owners struggled to extract well-defined computational results in the context of 
-Density Functional Theory (DFT) calculations. Ground-State quantum mechanical quantities as Lattice constants and bulk modulus of 
+Density Functional Theory (DFT) calculations. Ground-State quantum mechanical quantities as lattice constants and bulk modulus of 
 elementary crystals extracted from different codes were compared with each other, with the objective of reducing the uncertainties 
-on such data, and in some sense, to define a \emph{calibration} procedure for a Solid-State Physics computer code. 
+on such data, and in some sense, to define a \emph{calibration} procedure for a Solid-State Physics DFT code. 
 Any other code able to extract the same quantities with the same approximations might be compared with the 
 results of the community in order to assess its computational reliability.
 
@@ -171,8 +171,19 @@ In particular, we will discuss the interplay between reproducible LR quantities 
 % compared among different treatments, as they are \emph{intrinsically} associated to localized objects,
 % from quantities that \emph{explicitly} depend of the the employed computational treatment.
 
+The paper is organized as follows.
+Initially we will inspect how the question of reproducibility may be expressed 
+for ground state calculations of molecules. 
+Following these guidelines, we will then move to LR equations,
+by first considering the equations of motion of the response density operator, given
+the application of a perturbing field.
+Then we will consider the behaviour of the ``free oscillations'', i.e. the excited states
+of the molecule.
 Our considerations will also reveal useful for the understanding of the \emph{analytic structure} of LR quantities like
 the linear susceptibility of the system (i.e. the reducible polarizability).
+We support our considerations with numerical results on simple LR-TDDFT quantities.
+For readability purposes, the details of each calculation are explained in the appendix.
+
 Although we refer, as anticipated, to TDDFT models, such considerations might also be transposed to Many-Body Perturbation Theory
 approaches, in the context Quasi-Particle equations.
 
@@ -218,14 +229,14 @@ approaches, in the context Quasi-Particle equations.
 % from the equilibrium and the electrons sample a wider region of the state space, that will contains orbitals of both negative (bound) and positive (unbound) energies. 
 
 %\section{Localization properties of the linear response actors in open systems}
+\subsection{Long range behavior of the eigenvalue solution of the Schr\"odinger equation}
+\label{SEopenSystem}
 
 Let us start our discussion by revisiting the impact that the Isolated BC have on the 
 solutions of the time-independent Schr\"odinger Equation.
 We here present well-known concepts of elementary quantum mechanics, under a perspective that
 will turn out to be very useful in the forthcoming considerations about linear-response quantities.
 
-\subsection{Long range behavior of the eigenvalue solution of the Schr\"odinger equation}
-\label{SEopenSystem}
 Consider a (one-body) wavefunction $\ket{\psi}$ solution of the equation
 $\op H\ket{\psi}=\eps\ket{\psi}$, where we split the Hamiltonian operator into the sum of
 a kinetic $\op T$ and a potential $\op V \equiv \op H - \op T$ term.
@@ -242,7 +253,8 @@ can be effectively restricted on wavefunctions that can be considered as nonzero
 bounded domain. In other terms, a molecule can be associated to a ``scatterer'' that has a \emph{finite} 
 spatial extension; if a state $\ket{\psi}$ is localized, it will be the same for the ket $\ket{\op V \psi}$, though 
 perhaps in a larger region.
-For a computational analysis of the problem, this property is fundamental in the choice of the numerical treatment as we know that basis functions 
+For a computational analysis of the problem, this property is fundamental in the choice of the numerical treatment as we know that
+computational basis sets 
 that are tailored to express asymptotically vanishing wavefunctions are better suited for the solution of the problem.
 
 This fact is made apparent by the expression of 
@@ -408,7 +420,8 @@ restricted (if suitable) on a bounded real-space domain.
 %in the $\r$-representation. 
 Even when such locality argument holds true, for $\omega > |\eps_p|$, 
 the Helmholtz kernel behaves as a spherical wave and  gives raise to a $\ket{f^\Phi_p(\omega)}$ which is \emph{delocalized} in the entire real-space domain.
-Such delocalization is an intrinsic consequence of the value of $\omega$, and does not depend on the particular choice of the operators.
+Such delocalization is an intrinsic consequence of the value of $\omega$, and does not depend on the particular choice of 
+$\op \Phi$.
 Only for $\omega < |\eps_p|$ the kernel contains an exponential damping factor and $\ket{f^\Phi_p(\omega)}$ exhibits a bound-state behavior in the long range, 
 once again provided that the above locality arguments on $\ket{s_p^\Phi(\omega)}$ -- hence on $\op V'$ and $\Phi$ -- are valid.
 
@@ -417,8 +430,8 @@ Let us consider a static perturbing operator $\op\Phi_s$ that can be restricted 
 Any local operator, like \emph{e.g.} a static electric field $\mathbf F$, with associated scalar potential $\Phi_s(\r) = -\mathbf F \cdot \r$, would satisfy such property.
 We consider the perturbed hamiltonian $\hnot[\dm_{\Phi_s}] + \op\Phi_s$, where $\dm_{\Phi_s}$ represents the GS density of the perturbed system, and assume that the 
 perturbation strength ($|\mathbf F|$ in the above example) is sufficiently small to be consistent with a LR treatment of the problem. 
-In this case, the occupied eigenfunction $\ket{\psi_p^{\Phi_s}}$ of the perturbed hamiltonian can be extracted with traditional GS techniques, as by the hypothesis 
-of Eq.~\eqref{SEHelmholtz1}, they exhibit bound-state behavior.\footnote{The fulfilling of Eq.~\eqref{SEHelmholtz1} for energies below threshold
+In this case, the occupied eigenfunction $\ket{\psi_p^{\Phi_s}}$ of the perturbed hamiltonian can be extracted with traditional GS techniques, 
+as from the discussion around Eq.~\eqref{SEHelmholtz1}, they exhibit bound-state behavior.\footnote{The fulfilling of Eq.~\eqref{SEHelmholtz1} for energies below threshold
 is not \textit{per se} a guarantee of a localized $\ket{\psi}$. With such equation we demonstrate that, \emph{in the case when} a localized
 solution exists, this cannot be found for energies above threshold.}
 \begin{figure}[t]
@@ -467,10 +480,10 @@ $\omega$ is lower than the ionization potential $|\eps_h|$.
 In this case all the fluctuation states are below their threshold level and equation \eqref{LinearResponseFunctDef2} 
 is expressed in terms of genuinely localized 
 quantities. The quantities $\braket{\psi_p \op O| f_p^\Phi(\omega)}$, 
-being scalar products of bound-state-like objects, may thus be evaluated with computational setup that
+being scalar products of bound-state-like objects, may thus be evaluated with computational setups that
 are similar to the ones usually employed for GS calculations.
 This consideration proves why, when a given computer code employs established GS numerical techniques, 
-\emph{it is much easier to converge LR quantities for $\omega$ below threshold}.
+\emph{it is much easier to converge LR quantities for $\omega$ below IP}.
 The convergence in this regime is ``strong'', in the sense that the basis functions employed enable to express 
 with arbitrary precision \emph{both} the states $\ket{\op O \psi_p}$ and $\ket{f_p^\Phi(\omega)}$.
 This is of course true even when the above states are only implicitly expressed by the employed LR treatment,
@@ -559,7 +572,7 @@ In this way we can parametrize the excitation operators of the system as:
 \end{align}
 Each excitation ``mode'' of the system $\op E_a$ with energy $\Omega_a$, can then be associated to a set of states $\{\phi^a_p,\chi^a_p\}_{p \in a}$,
 entirely defined in the unoccupied subspace. For each choice of $p,a$, these objects represent, respectively, the state in which the occupied state $\ket{\psi_p}$
-is excited -- or from whom it decays -- when the system is subject to the perturbation $\op E_a^t$.
+is excited -- or from whom it decays -- when the system is subject to the perturbation $\Phi_a \equiv \commutator{\dmnot}{\op E_a}$.
 We denote with the shorthand $p \in a$ the fact that the sum of Eq.~\eqref{ExcitationOperatorsDef2}
 is in general restricted only to a $a$-dependent subset of the occupied orbitals, depending on the particular symmetry 
 of the excitation.
@@ -570,7 +583,7 @@ of the excitation.
 % appendix \ref{LiouvillianAction} to the dyadic representations of the excitation 
 % operators, 
 By applying the equations \eqref{ExcitationOperatorsDef1} to the above parametrization
-of the excitations, we obtain the following Sternheimer-like equations for the excited states 
+of the excitations, we obtain the following Sternheimer-like equations for the excited states:
 \begin{align}\lb{ExcitationOperatorsDef3}
 &\left[\Omega_a-(\hnot - \eps_p)\right] \ket{\phi_p^a} = \op Q_0 \op V'[\op E_a] \ket{\psi_p} \;, \nn\\
 &\left[-\Omega_a-(\hnot - \eps_p)\right]\ket{\chi_p^a} = \op Q_0\op V'[\op E^t_a]\ket{\psi_p}  \;.
@@ -583,13 +596,13 @@ We concentrate our analysis on the sector of positive energies, i.e. $\Omega_a >
 
 With the same spirit of the previous sections, we present a formal solution of \eqref{ExcitationOperatorsDef3} as follows 
 \begin{align}
-\ket{\phi^a_p} &= \op G_H(\Omega_a+\eps_p)\ket{s_{\phi}} \;, \nn \\
-\ket{\chi^a_p} &= \op G_H(-\Omega_a+\eps_p)\ket{s_{\chi}} \;,
+\ket{\phi^a_p} &= \op G_H(\Omega_a+\eps_p)\left(\op V \ket{\phi^a_p} + \ket{s_{\phi}} \right) \;, \nn \\
+\ket{\chi^a_p} &= \op G_H(-\Omega_a+\eps_p)\left( \op V \ket{\chi^a_p} + \ket{s_{\chi}} \right)\;,
 \end{align}
 where the source terms $s_\phi$ and $s_{\chi}$ are defined as:
 \begin{align}
- \ket{s_{\phi}} &= \op V \ket{\phi^a_p} + \op Q_0 \op V'[\op E_a] \ket{\psi_p} \\
- \ket{s_{\chi}} &= \op V \ket{\chi^a_p} + \op Q_0 \op V'[\op E^t_a] \ket{\psi_p}\;.
+ \ket{s_{\phi}} &=  \op Q_0 \op V'[\op E_a] \ket{\psi_p} \\
+ \ket{s_{\chi}} &=  \op Q_0 \op V'[\op E^t_a] \ket{\psi_p}\;.
 \end{align}
 We first point out that the Helmholtz kernel associated to the $\ket{\chi^a_p}$ state 
 contains an exponential damping factor for \emph{all} the positive values of $\Omega_a$.
@@ -605,7 +618,7 @@ For energies above this value, the behaviour of the state $\ket{\phi^a_p}$ is
 delocalized regardless of the particular nature of the operators $\op V$ and $\op V'$.
 This means that, if an excitation operator $\op E_a$ has an energy such that
 $\Omega_a>|\eps_p|$  for \emph{at least one} of the $p \in a$ defining the excitation,
-such operator cannot be restricted to localized states.
+such operator cannot be parametrized by employing localized states only.
 
 As a consequence, we deduce that a molecular excitation \emph{may} be expressed in terms of localized states
 \emph{only} when its energy is lower than \emph{all} the ionization potentials of the occupied states participating to the excitation,
@@ -707,8 +720,9 @@ should not depend from the computational setup used for their representation.
 
 Instead, the second sector contains the dense set of delocalized excitations with an associated continuum spectrum. These excitations behave as the unbound virtual orbitals analyzed in \cite{boffi2016} 
 and are deeply affected by the computational setup used to represent them. In particular, the presence of a finite computational domain implies a fictitious discretization of the excitation levels and 
-the associated spectrum exhibit an explicit dependence from the size of the domain. Excitations belonging to this sector thus lose their intrinsic physical meaning and have to be understood as a tool to 
-express the spectral decomposition of the Liouvillian superoperator.
+the associated spectrum exhibit an explicit dependence from the size of the domain. 
+Excitations belonging to this sector thus lose their intrinsic physical meaning and have to be understood simply as
+a representation of the density of states of the Liouvillian superoperator.
 
 \begin{figure}[ht]
 \includegraphics[scale=0.6]{CO_dos.eps}
@@ -787,11 +801,13 @@ We have seen in Sec.~\ref{FluctuationState} that
 for values of $\omega$ below the first ionization potential we expect
 $\ket{f_p^\Phi(\omega)}$ to have bound-state like behavior.
 For this to be true, the contribution from the delocalized excited states defining
-$\ket{f_p^\Phi(\omega)}_C$ should resum into a localized, asymptotically vanishing state
-\footnote{We might have locality of $\ket{f_p^\Phi}$ also when perturbation operator $\op \Phi$ is such that 
-$f_p^a(\op \Phi,\omega)=0$ for any $a$ labelling the continuum excitations. 
-However, this is not true in general: the plot in Fig.~\ref{co_AlphaExc}
-show this evidence when $\op \Phi$ is the dipole operator.}.
+$\ket{f_p^\Phi(\omega)}_C$ should resum into a localized, asymptotically vanishing state.
+Indeed, there is no particular reason to believe that $\ket{f_p^\Phi(\omega)}_C$ should be
+zero. The linear independence of the $\ket{w_p^a}$ states would imply that 
+$\varphi_p^a(\op \Phi,\omega)=0$ for any $a$ labelling the continuum excitations,
+which is too strong a condition for a general choice of $\op \Phi$.
+\footnote{The plot in Fig.~\ref{co_AlphaExc}
+show this evidence even in the simple case when $\op \Phi$ is the dipole operator.}.
 
 This means that, contrary to GS, \emph{for LR calculation,
 even when the response density is localized, the contribution coming from the 
@@ -801,7 +817,7 @@ unperturbed GS hamiltonian, %which is not in itself important for expressing the
 but to the continuum of excitations expressed as eigenstate of the 
 Liouvillian superoperator of Eq.~\eqref{Liouvillian}, needed to 
 express the spectral representation of the linear susceptibility.
-A fluctuation state, even if genuinely localized, will \emph{always} have a nonzero projection
+We \emph{cannot} exclude that a fluctuation state, even if genuinely localized, will have a nonzero projection
 in the essential part of the Liouvillian spectrum.
 
 \begin{figure}
